margin fixed on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,7 +33,7 @@
     .home-content{
         width: 90%;
         height: 100%;
-        margin-top: 5rem;
+        margin-top: 3rem;
     }
 
     .home-content > h1{
